fixed some css that was not showing up on heroku

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,18 +1,3 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
 body {
    margin: 0;
  }
@@ -82,4 +67,15 @@ h2.section-heading {
   font-family: "Molengo";
   text-align: center;
   padding-left: 0;
+}
+
+.add-vendor-edit-market li {
+  font-family: "Molengo";
+  margin-left: 470px;
+  list-style-type: none;
+}
+.market-address {
+  font-family: "Molengo";
+  text-align: center;
+  list-style-type: none;
 }
