--- a/app/assets/stylesheets/markets.scss
+++ b/app/assets/stylesheets/markets.scss
@@ -1,10 +1,1 @@
-.add-vendor-edit-market li {
-  font-family: "Molengo";
-  margin-left: 470px;
-  list-style-type: none;
-}
-.market-address {
-  font-family: "Molengo";
-  text-align: center;
-  list-style-type: none;
-}
+
